k8s/apps/learning-docker/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-docker
  labels:
    app: learning-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learning-docker
  template:
    metadata:
      labels:
        app: learning-docker
    spec:
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: learning-docker
          image: ghcr.io/upayanmazumder/learning-docker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
