k8s/apps/learning-docker/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-docker
spec:
  selector:
    app: learning-docker
  ports:
  - port: 3000
    targetPort: 3000
